syntax = "proto3";

package com.goodfood.basket;

// The Basket service definition.
service BasketService {
  // Sends a greeting
  rpc GetBasket (UserId) returns (Basket);
  rpc AddProduct (AddProductRequest) returns (Basket);
  rpc DeleteProduct (DeleteProductRequest) returns (Basket);
  rpc Reset (UserId) returns (Basket);
  rpc SetRestaurant (RestaurantId) returns (Basket);
}

message UserId {
  uint64 id = 1;
}

message RestaurantId {
  uint64 id = 1;
}

message Basket {
  string message = 1;
}
message AddProductRequest {
  uint64 user_id = 1;
  Product product = 2;
}

message DeleteProductRequest {
  uint64 user_id = 1;
  string product_id = 2;
}
message Product {
  string id = 1;
  string name = 2;
  string image = 3;
  string comment = 4;
  int32 price = 5;
  string preparation = 6;
  string weight = 7;
  string kilocalories = 8;
  int32 nutriscore = 9;
  int32 restaurant_id = 10;
}